kustomizations/traefik/overlays/gke/traefik-letsencrypt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  template:
    spec:
      containers:
      - name: traefik
        volumeMounts:
        - mountPath: /tmp/acme.json
          name: acme-storage
          subPath: acme.json
        # Why Can't you merge array as you have the deleteFromPrimitiveList ...
        args: [
          --api.dashboard,
          --log.level=INFO,
          # --accessLog,
          --entrypoints.http.address=:8000,
          --entrypoints.https.address=:4443,
          --entrypoints.https.http.tls.certResolver=default,
          --entrypoints.traefik-internal.address=:9000,
          --entrypoints.http-bolt.address=:7687,
          --entrypoints.http-bolt.http.tls.certResolver=default,
          --ping.entrypoint=traefik-internal,
          --metrics.prometheus.entrypoint=traefik-internal,
          --providers.kubernetescrd,
          --tracing.jaeger=true,
          --tracing.jaeger.localAgentHostPort=127.0.0.1:6831,
          --certificatesresolvers.default.acme.tlschallenge,
          --certificatesresolvers.default.acme.email=$(ACME_EMAIL),
          --certificatesresolvers.default.acme.storage=/tmp/acme.json,
          --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
        ]
      volumes:
      - name: acme-storage
        emptyDir: {}
