kustomizations/traefik/overlays/gke/tls-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
  - http
  - https
  routes:
  - kind: Rule
    match: Host(`monitoring.itinerix-project.net`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: traefik-dashboard-auth
  tls:
    certResolver: default
